Remove vertx dispatch and tiddy up UserServiceImpl